--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.19.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.2.0",
 		"@types/jest": "^29.5.14",
 		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
@@ -28,6 +30,7 @@
 		"eslint-plugin-react-refresh": "^0.4.18",
 		"globals": "^15.14.0",
 		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"ts-jest": "^29.2.5",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.22.0",
